add scala